correcting mario jump in cellphone layout and adding the touch action for mario jump works

--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,10 @@
         bottom: 284px;
     }
 
+    85% {
+        bottom: 284px;
+    }
+
     100% {
         bottom: 104;
     }
